@@ -4,6 +4,7 @@ Version next
     - Added PersistentObject read() and write() convenience methods
     - Added SpringVaadinSession.configureBean()
     - Added IdleTimeoutInputStream
+    - Removed @PostCompletionSupport (use TransactionSynchronizationManager)
 
 Version 1.0.659 Released April 9, 2013
 
